Changed NAMESPACE useDynLib

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,4 +7,4 @@ export(rock_fun)
 export(split_filename)
 importFrom(tools,file_ext)
 importFrom(tools,file_path_sans_ext)
-useDynLib(rmini)
+useDynLib(habitat.model)
