added xy.projection.na export

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@ S3method("+",Foo)
 S3method(hello,character)
 S3method(hello,default)
 export(hello)
+export(xy.project.na)
 export(reverse)
 export(rock_fun)
 export(split_filename)
